# configurations

./: README.md  centos_7_notes.txt  cmd_prompt_ps1.txt  cmd_prompt_ps1_root.sh  cmd_prompt_ps1_root_graphical.sh  color_manpage.sh  color_test.sh  dot_bash_powerline.sh  dot_gdbinit  dot_tmux_conf  dot_vimrc  linux_elf_notes.txt  linux_gdb_notes.txt  linux_kernel_notes.txt  load_firewall.sh  mount_shared_folder.sh  multiple_monitor.sh  rh_7_notes.txt  rh_7_questions.txt  rh_notes.txt  rh_notes_grub_systemd.txt  windbg_commands.txt
autotools/: Makefile.am  configure.ac  run_full_build.sh
autotools/src/: myprog.c  myutil.c
home_network_config/monitor/snort/: pulledpork.conf  pulledpork_notes.txt  run_pulledpork_cmd_line.sh
home_network_config/monitor/snort/selinux_avc_violations_fix/: mysnort.te  selinux_notes.txt
home_network_config/router/: etc_dhcp_dhcpd.conf  etc_firewalld_direct.xml  firewall-cmd_config.txt
i3_config/: .i3status.conf  config  i3_multiple_monitor.sh  i3_setup.sh
makefiles/: Makefile_1  Makefile_2  Makefile_lib_shared  Makefile_lib_static
rh_notes/: rh_notes_cron_at_tmpfiles.txt  rh_notes_firewall.txt  rh_notes_fs_partitions.txt  rh_notes_grub_systemd.txt  rh_notes_lvm.txt
windbg/: windbg_commands.txt
windbg/scripts/: breakpoint_cmds.wds
